--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   dio: ^4.0.0
   syncfusion_flutter_xlsio: 19.1.59-beta
   flutter_typeahead: ^3.1.0
+  google_maps_flutter: ^2.3.0
+  google_maps_flutter_web: ^0.5.1
+  mask_text_input_formatter: ^2.4.0
 
 
 dev_dependencies:
